--- a/style.css
+++ b/style.css
@@ -14,6 +14,11 @@
     background-color: white;
     height: 40px;
 }
+.kotak-2
+{
+    background-color: gray;
+    height: 40px;
+}
 .footer {
     background-color: black;
     display: flex;
